--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "socket.io": "^4.7.2",
+    "uuid": "^9.0.1",
     "validator": "^13.9.0"
   }
 }
