--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^7.2.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
+    "request": "^2.88.2",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
     "validator": "^13.9.0"
