--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
     "request": "^2.88.2",
     "socket.io": "^4.7.2",
