--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "ml-matrix": "^6.11.0",
     "mongoose": "^7.2.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
+    "pandas-js": "^0.2.4",
+    "random-forest": "^0.0.7",
     "request": "^2.88.2",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
-    "validator": "^13.9.0",
-    "csv-parser": "^3.0.0",
-    "pandas-js": "^0.2.4",
-    "random-forest": "^0.0.7"
+    "validator": "^13.9.0"
   }
 }
